--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,10 @@
   "author": "Ken Chen",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.13.4"
-  }
+    "body-parser": "^1.15.1",
+    "express": "^4.13.4",
+    "multer": "^1.1.0",
+    "mysql": "^2.10.2"
+  },
+  "devDependencies": {}
 }
