--- a/complicationsapp/Podfile
+++ b/complicationsapp/Podfile
@@ -5,6 +5,7 @@ target 'complicationsapp' do
   # Comment this line if you're not using Swift and don't want to use dynamic frameworks
   use_frameworks!
   pod 'CVCalendar', '~> 1.2.9'
+  pod 'Eureka', '~> 1.6'
 
   # Pods for complicationsapp
 
